# metadata-entry-form

./: .babelrc  .eslintrc  .firebaserc  .gitignore  .gitmodules  .sample.env  FIREBASE_DEPLOYMENT.md  README.md  asset-manifest.json  config-overrides.js  docker-compose.yml  firebase.json  index.html  jest.config.js  makefile  organizations-template.json  organizations.json  package-lock.json  package.json  precache-manifest.03def007781295866c79eaaf68b0ecf5.js  precache-manifest.05aa81e0492304a4f252dbd272bfdba6.js  precache-manifest.05dd47632abef16d10ad09ef5304202d.js  precache-manifest.07cb50a61a9eb494ce796d90764e97e7.js  precache-manifest.09c37928e4c54b1eddf79fc2f4e65ce5.js  precache-manifest.09e2dca6f14335cb327b2242eeeb771f.js  precache-manifest.09efb9fe4fd06926a59a29387c89f4e7.js  precache-manifest.0bad6d5eb444516de35ced68c9086dbb.js  precache-manifest.0cdff4ca95bd001cc2d3b3d3eaec1fce.js  precache-manifest.0f492003b25c490f2a6a930214f3da07.js  precache-manifest.1400ddd13d7c6b0f0e1e40283e5dc57b.js  precache-manifest.1432d3e0e1ce9fa1b86911c7c1b98dd4.js  precache-manifest.149393ba21abd7bdc9ac29bf95938b0c.js  precache-manifest.14cfc37bd6367d17d664abb256577e0d.js  precache-manifest.14eab2fada3bd56eebe509c40c86d633.js  precache-manifest.1e8ae7f1ebc8642bb3dbcbd1c3bc5d69.js  precache-manifest.1f476a9d8dfc1278107e1e2287a9d1bc.js  precache-manifest.26d976613fe80d7ff614e79e2bdf991d.js  precache-manifest.2763498b8e5d04ad5e38572b8db25a9b.js  precache-manifest.2b973d377b392a83abbeaed555024383.js  precache-manifest.2e5bc167350b1daade59d55246b9288b.js  (+141 more)
.devcontainer/: devcontainer.json
.github/workflows/: firebase-deploy-dev.yaml  firebase-deploy.yaml  firebase-hosting-delete-channel.yml  firebase-hosting-pull-request.yml  github-pages-deploy.yaml  netlify_deploy.yaml  run-build-tests.yaml  run-build-tests.yaml.disabled
cioos-records-update/: .gitignore  Dockerfile  README.md  app.py  build.py  cli.py  docker-compose.yaml  get_pac_dev1_metadata.sh  pyproject.toml  requirements.txt  sample.env  save_metadata_to_volume.sh  test_api.py
cioos-records-update/tests/data/: cioos-metadata-form-8d942-default-rtdb--ODRWCP95qCGQZM-ODHo-export.json  cioos-metadata-form-8d942-default-rtdb--ODh6Abeg7ehHC7hF6LE-export.json
cioos-records-update/waf/: footer.html  header.html  nginx.conf
firebase-functions/: .eslintrc  .firebaserc  Dockerfile  README.md  database.rules.hjson  database.rules.json  deploy-functions.sh  emulate-functions.sh  entrypoint.sh  firebase.json  index.js  package-lock.json  package.json
firebase-functions/emulator_backup/: firebase-export-metadata.json
firebase-functions/functions/: apiConfig.js  call-webhook.js  datacite.js  dataset-name.md  githubPublish.js  hooks-auth.js  index.js  issue.js  mailoutText.js  notify.js  package-lock.json  package.json  sample.env  serverUtils.js  translate.js  updates.js
firebase-functions/python-functions/: README.md  main.py  pyproject.toml  requirements.txt
firebase_to_xml/: .env  README.md  firebase_to_xml.py  pyproject.toml  scrubbers.py  setup.py
firebase_to_xml/firebase_to_xml/: __main__.py  dump_all.py  get_records_from_firebase.py  organizations.py  record_json_to_yaml.py  scrubbers.py
firebase_to_xml/firebase_to_xml/resources/: eov.json  epsg.json  licenses.json
firebase_to_xml/output/: sdfsdfg.xml
public/: index.html
src/: associationTypeMapping.js  auth.js  categoryList.js  eovs.js  eovs.json  firebase.js  i18nDictionaryEn.js  i18nDictionaryFr.js  index.js  index.jsx  isoCodeLists.js  keywordList.js  keywordLists.js  platforms.json  regions.js  serviceWorker.js  setupTests.js
src/__testData__/: expectedDataCiteStructure.js  mockMetadataRecord.js
src/__tests__/: firebase.test.js  firebaseEnableDoiCreation.test.js  isoCodeList.test.js  recordToDataCite.test.js
src/components/: Admin.jsx  App.jsx  BaseLayout.jsx  BilingualTextInput.jsx  CheckBoxList.jsx  ContactTitle.jsx  Contacts.jsx  DateInput.jsx  EditContact.jsx  Home.jsx  I18n.jsx  LastEdited.jsx  Layout.jsx  MetadataForm.jsx  NavDrawer.jsx  NotFound.jsx  RegionSelect.jsx  Reviewer.jsx  SelectInput.jsx  SimpleModal.jsx  Start.jsx  StatusChip.jsx  Submissions.jsx  Success.jsx  validate.js
src/providers/: FirebaseProvider.jsx  UserProvider.jsx
src/releaseNotes/: 2024-04-01.md  notes_en.md  notes_fr.md
src/utils/: apiConfig.js  blankRecord.js  doiUpdate.js  emlCoverage.j2  emlTemplate.j2  firebaseContactFunctions.js  (+19 more)
(+557 files in other folders)
