[project]
name = "cioos-records-update"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "firebase-to-xml",

    "flask>=3.1.0",

    "gunicorn>=23.0.0",

    "sentry-sdk[flask]>=2.20.0",

    "werkzeug>=3.1.3",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.4",
]

[tool.uv.sources]
firebase-to-xml = { path = "../firebase_to_xml" }
