[project]
name = "python-functions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cioos-metadata-conversion",
    "firebase-functions>=0.4.3",
    "setuptools<81",
]

[tool.uv.sources]
cioos-metadata-conversion = { git = "https://github.com/cioos-siooc/cioos-metadata-conversion.git" }
